--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-17
 android.library=true
 android.library.reference.1=../android.storage
+android.library.reference.2=../android.security.client
