--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
+target=Google Inc.:Google APIs:16
 android.library=true
 android.library.reference.1=../android.storage
 android.library.reference.2=../android.security.client
