--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=Google Inc.:Google APIs:16
 android.library=true
-android.library.reference.1=../android.storage
-android.library.reference.2=../android.security.client
+android.library.reference.1=..\\android.storage
+android.library.reference.2=../../smartcampus-android/android.aac
